--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <div class="project-link-wrap">
             <p>THE </p>
              <div class="globe-img">
-            <img src="tuhi.png" width="200" height="200" >
+            <img src="image1.png" width="200" height="200" >
                  </div> 
               <div class="text">
                   
